# tdeployer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.yml  pyproject.toml
docs/docs/: CHANGELOG.md  index.md
src/tdeployer/: __main__.py  application.py  ciclient.py  config.py  errors.py  server.py
src/tests/: example.yml  test_config.py  test_server.py
