[tool.poetry]
name = "tdeployer"
version = "0.1.0"
description = ""
authors = ["svtter <svtter@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Fabric = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
