[tool.poetry]
name = "tdeployer"
version = "0.2.0"
description = ""
authors = ["svtter <svtter@qq.com>"]

include = ["src/*"]

[tool.poetry.dependencies]
python = "^3.9"
Fabric = "^2.7.0"
pyserde = {extras = ["toml", "yaml"], version = "^0.7.3"}
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tdeployer = "tdeployer.__main__:cli"
